@@ -7,10 +7,10 @@
 
 #include "machine.h"
 
-int machine_init_r(struct statics *, const char **);
-void get_system_info_r(struct system_info *, const char **);
+int machine_init_r(struct statics *, struct pg_conninfo_ctx *);
+void get_system_info_r(struct system_info *, struct pg_conninfo_ctx *);
 caddr_t get_process_info_r(struct system_info *, struct process_select *, int,
-		const char **);
+		struct pg_conninfo_ctx *);
 char *format_header_r(char *);
 char *format_next_io_r(caddr_t);
 char *format_next_process_r(caddr_t);
